--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.587.0",
+    "@paralleldrive/cuid2": "^2.2.2",
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-fileupload": "^1.5.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.9.7",
     "sequelize": "^6.37.3"
