--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@paralleldrive/cuid2": "^2.2.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.0",
